# YAMLP

./: CMakeLists.txt  README.md  main.cpp
include/: function.h  perceptron.h  yamlp.h
include/activation_functions/: activation_tanh.h
include/derivatives_of_activation_functions/: derivative_of_activation_tanh.h
src/: function.cpp  perceptron.cpp  yamlp.cpp
src/activation_functions/: activation_tanh.cpp
src/derivatives_of_activation_functions/: derivative_of_activation_tanh.cpp
